syntax = "proto3";

option optimize_for = LITE_RUNTIME;

message boundingSphereData_proto
{
	repeated float cntr = 1;
	optional float rad = 2;
}